# clamp_cast

./: .travis.yml  CMakeLists.txt  appveyor.yml  conanfile.txt  readme.md
cmake/: clamp_castConfig.cmake.in
include/clamp_cast/: clamp_cast.hpp
tests/: main.cpp
